src/objects/Association_Data__mdt.object
<CustomObject>
    <fields>
        <fullName>AACR_Fellow__c</fullName>
        <description>Store the badge name for AACR Fellow</description>
        <label>AACR Fellow</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSCR__c</fullName>
        <label>BSCR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CICR__c</fullName>
        <label>CICR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIMM__c</fullName>
        <label>CIMM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEG__c</fullName>
        <label>MEG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCWG__c</fullName>
        <label>PCWG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <label>RSM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TME__c</fullName>
        <label>TME</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WICR__c</fullName>
        <label>WICR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Association Data</label>
    <pluralLabel>Association Data</pluralLabel>
</CustomObject>